# synch

./: .gitignore  AGENT_DISTRIBUTION_PLAN.md  AGENT_EXECUTION_PLAN.md  AGENT_REFINEMENT_PLAN.md  LICENSE  README.md  Taskfile.yml  Taskfile_copy.txt  docker-compose.test.yml  docker-compose.yml  test_import.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: android.yml  ci.yml  docker.yml  release.yml  synch-ci.yml
.synch/instructions/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  README.md
clients/mobile/android/: build.gradle.kts  settings.gradle.kts
clients/mobile/android/app/: build.gradle.kts
clients/plugins/openclaw-agent/daemon/: index.ts
clients/plugins/vcp-agent/: VCP-Integration-Overview.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
clients/plugins/vcp-agent/daemon/: SynchClient.ts  config.env  crypto.ts  handlers.ts  index.ts  tsconfig.json
clients/plugins/vcp-agent/src/: AgentIntelligence.ts  App.css  App.tsx  SynchClient.ts  index.css
config/: dev.env  prod.env  staging.env
core/: Cargo.toml
core/crates/synch-crypto/: Cargo.toml
core/crates/synch-crypto/src/: contract.rs  encrypt.rs  error.rs  hash.rs  identity.rs  keys.rs  lib.rs  ratchet.rs
core/crates/synch-ffi/: Cargo.toml  build.rs
core/crates/synch-ffi/src/: lib.rs
core/crates/synch-sync/: Cargo.toml
core/crates/synch-sync/src/: contract_manager.rs  delta.rs  error.rs  handshake.rs  lib.rs  net.rs  secure.rs  vault.rs  version_vector.rs
core/crates/synch-sync/tests/: concurrency.rs
deploy/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
deploy/helm/synch/: Chart.yaml  values.yaml
deploy/nginx/: nginx.conf
deploy/scripts/: install-server.sh
deploy/terraform/: main.tf
docs/: ADR-001-architecture.md  ADR-002-multi-relay-topology.md  API.md  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT.md  PERMISSION_CONTRACT_DESIGN_ZH.md  ROADMAP.md  SECURITY.md
docs/requirements/: 确认书.md
proto/: buf.gen.yaml  buf.yaml
proto/v1/: crypto.proto  sync.proto  synch.proto
server/: Dockerfile  go.mod  go.sum  healthcheck.sh
server/cmd/relay/: main.go
server/pkg/net/: limiter.go
server/pkg/proto/v1/: crypto.pb.go  sync.pb.go  synch.pb.go
server/pkg/storage/: badger.go  badger_test.go  store.go
shared/ts-core/src/proto/: typeRegistry.ts
shared/ts-core/src/proto/v1/: crypto.ts  sync.ts  (+1 more)
tests/e2e/: crypto.test.ts  package-lock.json  package.json  security.test.ts  setup.ts  sync.test.ts  vitest.config.ts
work-history/: 01_AGENT_EXECUTION_PLAN.md  02_AGENT_REFINEMENT_PLAN.md  03_AGENT_DISTRIBUTION_PLAN.md  04_INTERACTION_PERMISSIONS_PLAN.md  05_CLIENT_INTEGRATION_PLAN.md
(+19 files in other folders)
