[package]
name = "synch-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "synch_ffi"

[dependencies]
synch-crypto = { path = "../synch-crypto" }
synch-sync = { path = "../synch-sync" }
uniffi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[features]
uniffi-cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-cli"]
